sfexchange-dreamforce-project/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>dfp_IsAccountTrainingDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Accounts Done ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfp_IsBypassTrainingFlows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Training Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfp_IsFirstLoginExperienceDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Login Experience Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfp_IsHasAcceptedConditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Accepted Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfp_IsHasCreatedAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Created Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfp_IsHasCreatedContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Created Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfp_IsHasCreatedOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Created Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfp_IsTrainingContactsDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Contacts Done ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfp_IsTrainingOppsDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Opps Done ?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>